usefulprograms/errors.txt
ERROR:
execfile.c: In function ‘main’:
execfile.c:9:1: error: ‘iuyiuy’ undeclared (first use in this function)
 iuyiuy
 ^~~~~~
execfile.c:9:1: note: each undeclared identifier is reported only once for each function it appears in
execfile.c:9:7: error: expected ‘;’ before ‘}’ token
 iuyiuy
       ^
       ;
 }
 ~      
